--- a/Index.html
+++ b/Index.html
@@ -366,13 +366,11 @@
 		  <p class="color_text_modal2"> Вы можете написать площадь вашего помещения, чтобы мы до звонка вам, смогли рассчитать стоимость проекта для вас.</p>
 		  <p class="contact-info">
 			Если у вас появились срочные вопросы, то можете связаться с нами по номеру телефона:</p> 
-				<div class="colum"><strong class="phone">+7(911)-905-33-32</strong>
-				<div class="submit-button dop_pad"><button type="submit">ОБСУДИТЬ ПРОЕКТ</button></div>
-	    	</div>
+				<strong class="phone">+7(911)-905-33-32</strong>
+				<div class="colum2"><div class="submit-button"><button type="submit">ОБСУДИТЬ ПРОЕКТ</button></div></div>
     </form>
   </div>
 </div>
-	
 	
 	<h3 id="realization" class="title_for_blocks dopoln_raz">ЭТАП РЕАЛИЗАЦИИ ВМЕСТЕ С НАМИ</h3>
 	 <div class="container">
