--- a/Index.html
+++ b/Index.html
@@ -192,7 +192,6 @@
                 <img src="Image/205.jpg" alt="Image 205" class="popup-slider-image">
                 <img src="Image/206.jpg" alt="Image 206" class="popup-slider-image">
 				<img src="Image/207.jpg" alt="Image 207" class="popup-slider-image">
-				<img src="Image/208.jpg" alt="Image 208" class="popup-slider-image">
 				<img src="Image/301.jpg" alt="Image 301" class="popup-slider-image">
                 <img src="Image/302.jpg" alt="Image 302" class="popup-slider-image">
                 <img src="Image/303.jpg" alt="Image 303" class="popup-slider-image">
@@ -206,7 +205,6 @@
                 <img src="Image/405.jpg" alt="Image 405" class="popup-slider-image">
                 <img src="Image/406.jpg" alt="Image 406" class="popup-slider-image">
 				<img src="Image/407.jpg" alt="Image 407" class="popup-slider-image">
-				<img src="Image/408.jpg" alt="Image 408" class="popup-slider-image">
 				<img src="Image/501.jpg" alt="Image 501" class="popup-slider-image">
                 <img src="Image/502.jpg" alt="Image 502" class="popup-slider-image">
                 <img src="Image/503.jpg" alt="Image 503" class="popup-slider-image">
@@ -254,7 +252,7 @@
 				  <li>Разрабатывать сложные, многослойные пространства, где&nbspкаждая деталь отражает вашу&nbspличность.</li>
 				  <li>Применять современные технологии и&nbspинновационные решения, обеспечивая комфорт и&nbspудобство.</li>
 				  <li>Работать с яркими цветами, сочетая их&nbspс&nbspвинтажными акцентами для&nbspсоздания неповторимого стиля.</li>
-				  <li>Внедрять искусство в самых разных его&nbspпроявлениях, делая интерьер по-настоящему живым.</li>
+				  <li>Внедрять искусство в самых разных его&nbspпроявлениях, делая&nbspинтерьер по-настоящему живым.</li>
 				  <li>Проектировать мебель на заказ — уникальную, функциональную и&nbspсозданную специально для&nbspвас.</li>
 				  <li>Использовать богатый и&nbspизысканный текстиль, который&nbspдобавляет глубину и&nbspуют.</li>
 			    </ul>
@@ -276,7 +274,7 @@
 			</div>
 			<div class="grid-item"><img src="Image/pict3.png" alt="Этап 3"> <div class="dark-overlay"></div>
 				<div class="overlay">
-					<p>Создание планировочных решенийа</p>
+					<p>Создание планировочных решений</p>
 				</div>
 				<span class="stage color1">3 ЭТАП</span>
 			</div>
@@ -308,7 +306,7 @@
 		  </div>
 		  <p class="text3">ЛАЙТ</p>
 		  
-			<p class="decor non_plus">Планировочное решение <span>1 вариант</span><br>
+			<p class="decor non_plus">Планировочное решение <span class="italics">1 вариант</span><br>
 			Таблица материалов отделки</p>
 		  <ul class="decor for_1">
 			<li>+ Коллажи</li>
@@ -429,7 +427,8 @@
 	</div>
 	</div>
 	<footer>
-		<div class="row3 center"><h4 class="Ta_samaya">ТА САМАЯ</h4><div class="row_for_messenger">
+		<div class="row3 center"><h4 class="Ta_samaya">ТА САМАЯ</h4>
+			<div class="meta"><div class="row_for_messenger">
 			<a href="https://t.me/Lukia_Sokolova" target="_blank" >
 				<img src="Image/telegram.png" alt="Иконка телеграма"></a>
 			<a class="phone-link" href="tel:+79119053332" target="_blank">
@@ -439,10 +438,9 @@
 				<img src="Image/Whatsapp.png" alt="Иконка WhatsApp"></a>
 			<a href="https://ru.pinterest.com/TaSamayaDesign" target="_blank" >
 				<img src="Image/pinterest.png" alt="Иконка пинтереста"></a>
-			<a class="insta" href="https://www.instagram.com/ta_samaya_design/profilecard" target="_blank" >
-				<img src="Image/instagram.png" alt="Иконка инстаграмма">
-				<span class="tooltip">Соцсеть принадлежит компании Meta, <br> признанной экстремистской в РФ</span></a>
-		</div></div>
+			<a href="https://www.instagram.com/ta_samaya_design/profilecard" target="_blank" >
+				<img src="Image/instagram.png" alt="Иконка инстаграмма"></a>			
+		</div><p class="insta">* Соцсеть Instagram принадлежит компании Meta, признанной&nbspэкстремистской&nbspв&nbspРФ</p></div></div>
 		<div class="line"></div>
 		<div id = "fottertext" class="row4 marging_footer_text">
 			<div class="colum"><p id = "textfot" class="text_footer">
