--- a/Index.html
+++ b/Index.html
@@ -188,7 +188,6 @@
 				<img src="Image/201.jpg" alt="Image 201" class="popup-slider-image">
                 <img src="Image/202.jpg" alt="Image 202" class="popup-slider-image">
                 <img src="Image/203.jpg" alt="Image 203" class="popup-slider-image">
-                <img src="Image/204.jpg" alt="Image 204" class="popup-slider-image">
                 <img src="Image/205.jpg" alt="Image 205" class="popup-slider-image">
                 <img src="Image/206.jpg" alt="Image 206" class="popup-slider-image">
 				<img src="Image/207.jpg" alt="Image 207" class="popup-slider-image">
@@ -440,7 +439,7 @@
 				<img src="Image/pinterest.png" alt="Иконка пинтереста"></a>
 			<a href="https://www.instagram.com/ta_samaya_design/profilecard" target="_blank" >
 				<img src="Image/instagram.png" alt="Иконка инстаграмма"></a>			
-		</div><p class="insta">* Соцсеть Instagram принадлежит компании Meta, признанной&nbspэкстремистской&nbspв&nbspРФ</p></div></div>
+		</div><p class="insta">*&nbspСоцсеть&nbsp"Instagram"&nbspпринадлежит&nbspкомпании&nbspМeta, признанной&nbspэкстремистской&nbspв&nbspРФ</p></div></div>
 		<div class="line"></div>
 		<div id = "fottertext" class="row4 marging_footer_text">
 			<div class="colum"><p id = "textfot" class="text_footer">
