--- a/Index.html
+++ b/Index.html
@@ -439,7 +439,7 @@
 				<img src="Image/pinterest.png" alt="Иконка пинтереста"></a>
 			<a href="https://www.instagram.com/ta_samaya_design/profilecard" target="_blank" >
 				<img src="Image/instagram.png" alt="Иконка инстаграмма"></a>			
-		</div><p class="insta">*&nbspСоцсеть Instagram принадлежит компании Мeta, признанной&nbspэкстремистской&nbspв&nbspРФ</p></div></div>
+		</div><p class="insta">*&nbspСоцсеть Instagram" принадлежит компании Мeta, признанной&nbspэкстремистской&nbspв&nbspРФ</p></div></div>
 		<div class="line"></div>
 		<div id = "fottertext" class="row4 marging_footer_text">
 			<div class="colum"><p id = "textfot" class="text_footer">
