--- a/Index.html
+++ b/Index.html
@@ -22,13 +22,15 @@
 	<link rel="stylesheet" href="Style/Style1.css">
 	<link rel="stylesheet" href="Style/Style2.css">
 	<link rel="stylesheet" href="Style/Style3.css">
-	<link rel="icon" href="logo/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="logo/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="logo/favicon-16x16.png" sizes="16x16" type="image/png">
-	<link rel="apple-touch-icon" href="logo/apple-touch-icon.png" sizes="180x180">
-    <link rel="android-touch-icon" href="logo/android-chrome-192x192.png" sizes="192x192">
-	<link rel="android-touch-icon" href="logo/android-chrome-512x512.png" sizes="512x512">
-	<link rel="manifest" href="logo/site.webmanifest">
+	<link rel="icon" type="image/png" href="logo/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/svg+xml" href="logo/favicon.svg" />
+	<link rel="shortcut icon" href="logo/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="logo/apple-touch-icon.png" />
+	<meta name="apple-mobile-web-app-title" content="Та самая" />
+	<link rel="manifest" href="logo/site.webmanifest" />
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js" defer></script>
 	<script type="application/ld+json">
 		{
 		  "@context": "http://schema.org",
@@ -94,7 +96,7 @@
     		</div>
     <!-- Основной текст -->
     		
-      		<div class="for_title1"><h1>ТА САМАЯ</h1><h2>студия дизайна интерьера</h2></div>
+      		<div class="for_title1"><h1 id="reference-title">ТА САМАЯ</h1><h2 id="adjusted-title">студия дизайна интерьера</h2></div>
 			<img class="new_bac" src="Style/TitlePhoto2.png" alt="Картинка для шапки после 500рх">
 			<div id="about" class="main-content p">
       				<p class="text1">Дизайн, который решает сложные задачи</p>
@@ -114,22 +116,6 @@
 	<h3 class="sticky-title">НАШИ ПРОЕКТЫ</h3>
 	<div class="picture_scroll">
 	  <div id="track" class="track">
-		<img class="image-modal-trigger" src="Image/1.png" alt="Картинка для скрола" data-image="1">
-		<img class="image-modal-trigger" src="Image/2.png" alt="Картинка для скрола" data-image="2">
-		<img class="image-modal-trigger" src="Image/3.png" alt="Картинка для скрола" data-image="3">
-		<img class="image-modal-trigger" src="Image/4.png" alt="Картинка для скрола" data-image="4">
-		<img class="image-modal-trigger" src="Image/5.png" alt="Картинка для скрола" data-image="5">
-		<img class="image-modal-trigger" src="Image/6.png" alt="Картинка для скрола" data-image="6">
-		<img class="image-modal-trigger" src="Image/7.png" alt="Картинка для скрола" data-image="7">
-		<img class="image-modal-trigger" src="Image/8.png" alt="Картинка для скрола" data-image="8">
-		<img class="image-modal-trigger" src="Image/1.png" alt="Картинка для скрола" data-image="1">
-		<img class="image-modal-trigger" src="Image/2.png" alt="Картинка для скрола" data-image="2">
-		<img class="image-modal-trigger" src="Image/3.png" alt="Картинка для скрола" data-image="3">
-		<img class="image-modal-trigger" src="Image/4.png" alt="Картинка для скрола" data-image="4">
-		<img class="image-modal-trigger" src="Image/5.png" alt="Картинка для скрола" data-image="5">
-		<img class="image-modal-trigger" src="Image/6.png" alt="Картинка для скрола" data-image="6">
-		<img class="image-modal-trigger" src="Image/7.png" alt="Картинка для скрола" data-image="7">
-		<img class="image-modal-trigger" src="Image/8.png" alt="Картинка для скрола" data-image="8">
 		<img class="image-modal-trigger" src="Image/1.png" alt="Картинка для скрола" data-image="1">
 		<img class="image-modal-trigger" src="Image/2.png" alt="Картинка для скрола" data-image="2">
 		<img class="image-modal-trigger" src="Image/3.png" alt="Картинка для скрола" data-image="3">
