--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,8 @@
 	<link rel="icon" type="image/svg+xml" href="logo/favicon.svg" />
 	<link rel="shortcut icon" href="logo/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="logo/apple-touch-icon.png" />
+	<link rel="web-app-manifest-192x192" sizes="192x192" href="logo/web-app-manifest-192x192.png" />
+	<link rel="web-app-manifest-512x512" sizes="512x512" href="logo/web-app-manifest-512x512.png" />
 	<meta name="apple-mobile-web-app-title" content="Та самая" />
 	<link rel="manifest" href="logo/site.webmanifest" />
 	
@@ -95,10 +97,10 @@
 				</div>
     		</div>
     <!-- Основной текст -->
-    		
-      		<div class="for_title1"><h1 id="reference-title">ТА САМАЯ</h1><h2 id="adjusted-title">студия дизайна интерьера</h2></div>
+    		<img class="for_title2" src="Image/titles.png" alt="Заголовок" aria-hidden="true">
+      		<!--<div class="for_title1"><h1 id="reference-title">ТА САМАЯ</h1><h2 id="adjusted-title">студия дизайна интерьера</h2></div>-->
 			<img class="new_bac" src="Style/TitlePhoto2.png" alt="Картинка для шапки после 500рх">
-			<div id="about" class="main-content p">
+			<div class="main-content p">
       				<p class="text1">Дизайн, который решает сложные задачи</p>
       				<p class="text2">Ваша идея —&nbspэто&nbspнаш&nbspвызов! Мы —&nbspстудия дизайна интерьеров, <br>специализирующаяся на&nbspсложных и&nbspнестандартных проектах.</p>
       				<p class="text2">Если вы мечтаете о&nbspквартире с&nbspинтуитивно понятной <br>системой освещения, сауной и&nbspджакузи, или&nbspхотите создать <br>уникальное пространство в&nbspстаром фонде —&nbspмы&nbspзнаем, как&nbspэто&nbspсделать!</p>
@@ -116,14 +118,14 @@
 	<h3 class="sticky-title">НАШИ ПРОЕКТЫ</h3>
 	<div class="picture_scroll">
 	  <div id="track" class="track">
-		<img class="image-modal-trigger" src="Image/1.png" alt="Картинка для скрола" data-image="1">
-		<img class="image-modal-trigger" src="Image/2.png" alt="Картинка для скрола" data-image="2">
-		<img class="image-modal-trigger" src="Image/3.png" alt="Картинка для скрола" data-image="3">
-		<img class="image-modal-trigger" src="Image/4.png" alt="Картинка для скрола" data-image="4">
-		<img class="image-modal-trigger" src="Image/5.png" alt="Картинка для скрола" data-image="5">
-		<img class="image-modal-trigger" src="Image/6.png" alt="Картинка для скрола" data-image="6">
-		<img class="image-modal-trigger" src="Image/7.png" alt="Картинка для скрола" data-image="7">
-		<img class="image-modal-trigger" src="Image/8.png" alt="Картинка для скрола" data-image="8">
+		<img class="image-modal-trigger" src="Image/1.png" alt="Картинка дизайна интерьера" data-image="1">
+		<img class="image-modal-trigger" src="Image/2.png" alt="Картинка дизайна интерьера" data-image="2">
+		<img class="image-modal-trigger" src="Image/3.png" alt="Картинка дизайна интерьера" data-image="3">
+		<img class="image-modal-trigger" src="Image/4.png" alt="Картинка дизайна интерьера" data-image="4">
+		<img class="image-modal-trigger" src="Image/5.png" alt="Картинка дизайна интерьера" data-image="5">
+		<img class="image-modal-trigger" src="Image/6.png" alt="Картинка дизайна интерьера" data-image="6">
+		<img class="image-modal-trigger" src="Image/7.png" alt="Картинка дизайна интерьера" data-image="7">
+		<img class="image-modal-trigger" src="Image/8.png" alt="Картинка дизайна интерьера" data-image="8">
 		</div>
 	  </div>
 	</div>
@@ -165,65 +167,65 @@
 		<button><img class="popup-arrow right-popup-arrow" src="Image/rightbutton.png" alt="Правая стрелка"></button>
     <div class="popup-content">
             <div class="popup-image-container" id="popup-image-container">
-                <img src="Image/101.jpg" alt="Image 101" class="popup-slider-image">
-                <img src="Image/102.jpg" alt="Image 102" class="popup-slider-image">
-                <img src="Image/103.jpg" alt="Image 103" class="popup-slider-image">
-                <img src="Image/104.jpg" alt="Image 104" class="popup-slider-image">
-                <img src="Image/105.jpg" alt="Image 105" class="popup-slider-image">
-                <img src="Image/106.jpg" alt="Image 106" class="popup-slider-image">
-				<img src="Image/201.jpg" alt="Image 201" class="popup-slider-image">
-                <img src="Image/202.jpg" alt="Image 202" class="popup-slider-image">
-                <img src="Image/203.jpg" alt="Image 203" class="popup-slider-image">
-                <img src="Image/204.jpg" alt="Image 205" class="popup-slider-image">
-                <img src="Image/205.jpg" alt="Image 206" class="popup-slider-image">
-				<img src="Image/206.jpg" alt="Image 207" class="popup-slider-image">
-				<img src="Image/301.jpg" alt="Image 301" class="popup-slider-image">
-                <img src="Image/302.jpg" alt="Image 302" class="popup-slider-image">
-                <img src="Image/303.jpg" alt="Image 303" class="popup-slider-image">
-                <img src="Image/304.jpg" alt="Image 304" class="popup-slider-image">
-                <img src="Image/305.jpg" alt="Image 305" class="popup-slider-image">
-                <img src="Image/306.jpg" alt="Image 306" class="popup-slider-image">
-				<img src="Image/401.jpg" alt="Image 401" class="popup-slider-image">
-                <img src="Image/402.jpg" alt="Image 402" class="popup-slider-image">
-                <img src="Image/403.jpg" alt="Image 403" class="popup-slider-image">
-                <img src="Image/404.jpg" alt="Image 404" class="popup-slider-image">
-                <img src="Image/405.jpg" alt="Image 405" class="popup-slider-image">
-                <img src="Image/406.jpg" alt="Image 406" class="popup-slider-image">
-				<img src="Image/407.jpg" alt="Image 407" class="popup-slider-image">
-				<img src="Image/501.jpg" alt="Image 501" class="popup-slider-image">
-                <img src="Image/502.jpg" alt="Image 502" class="popup-slider-image">
-                <img src="Image/503.jpg" alt="Image 503" class="popup-slider-image">
-                <img src="Image/504.jpg" alt="Image 504" class="popup-slider-image">
-                <img src="Image/505.jpg" alt="Image 505" class="popup-slider-image">
-                <img src="Image/506.jpg" alt="Image 506" class="popup-slider-image">
-				<img src="Image/507.jpg" alt="Image 507" class="popup-slider-image">
-				<img src="Image/508.jpg" alt="Image 508" class="popup-slider-image">
-				<img src="Image/601.jpg" alt="Image 601" class="popup-slider-image">
-                <img src="Image/602.jpg" alt="Image 602" class="popup-slider-image">
-                <img src="Image/603.jpg" alt="Image 603" class="popup-slider-image">
-                <img src="Image/604.jpg" alt="Image 604" class="popup-slider-image">
-                <img src="Image/605.jpg" alt="Image 605" class="popup-slider-image">
-                <img src="Image/606.jpg" alt="Image 606" class="popup-slider-image">
-				<img src="Image/607.jpg" alt="Image 607" class="popup-slider-image">
-				<img src="Image/701.jpg" alt="Image 701" class="popup-slider-image">
-                <img src="Image/702.jpg" alt="Image 702" class="popup-slider-image">
-                <img src="Image/703.jpg" alt="Image 703" class="popup-slider-image">
-                <img src="Image/704.jpg" alt="Image 704" class="popup-slider-image">
-                <img src="Image/705.jpg" alt="Image 705" class="popup-slider-image">
-                <img src="Image/706.jpg" alt="Image 706" class="popup-slider-image">
-				<img src="Image/707.jpg" alt="Image 707" class="popup-slider-image">
-				<img src="Image/801.jpg" alt="Image 801" class="popup-slider-image">
-                <img src="Image/802.jpg" alt="Image 802" class="popup-slider-image">
-                <img src="Image/803.jpg" alt="Image 803" class="popup-slider-image">
-                <img src="Image/804.jpg" alt="Image 804" class="popup-slider-image">
-                <img src="Image/805.jpg" alt="Image 805" class="popup-slider-image">
-                <img src="Image/806.jpg" alt="Image 806" class="popup-slider-image">
+                <img src="Image/101.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/102.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/103.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/104.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/105.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/106.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/201.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/202.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/203.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/204.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/205.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/206.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/301.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/302.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/303.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/304.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/305.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/306.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/401.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/402.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/403.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/404.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/405.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/406.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/407.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/501.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/502.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/503.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/504.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/505.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/506.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/507.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/508.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/601.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/602.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/603.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/604.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/605.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/606.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/607.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/701.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/702.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/703.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/704.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/705.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/706.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/707.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+				<img src="Image/801.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/802.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/803.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/804.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/805.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/806.jpg" alt="Дизайн интерьера" class="popup-slider-image">
             </div>
     	</div>
 	</div>
 	
 	
-	<div class="container3">
+	<div id="about" class="container3">
 		<h3 class="title_for_blocks">О НАС И НАШИХ ЦЕННОСТЯХ</h3>
 		<div class="row2 together_row">
 			<img class="photo" src="Image/Together2.jpg" alt="Общее фото сотрудников">
@@ -246,35 +248,35 @@
 		
 		<h3 id="steps" class="title_for_blocks">ЭТАПЫ РАБОТЫ НАД ПРОЕКТОМ</h3>
 		<div class="grid-container">
-			<div class="grid-item"><img src="Image/pict1.png" alt="Этап 1"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/pict1.png" alt="Этап работы 1"> <div class="dark-overlay"></div>
 				<div class="overlay">
 					<p>Личная встреча <br>и подписание договора</p>
 				</div>
 				<span class="stage color1">1 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict2.png" alt="Этап 2"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/pict2.png" alt="Этап работы 2"> <div class="dark-overlay"></div>
 				<div class="overlay"><p>Обмер и фотофиксация помещения, <br>техническое задание</p>
 				</div>
 				<span class="stage color1">2 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict3.png" alt="Этап 3"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/pict3.png" alt="Этап работы 3"> <div class="dark-overlay"></div>
 				<div class="overlay">
 					<p>Создание планировочных решений</p>
 				</div>
 				<span class="stage color1">3 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict4.png" alt="Этап 4"><div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/pict4.png" alt="Этап работы 4"><div class="dark-overlay"></div>
 				<div class="overlay"><p>Создание <br>визуальной концепции помещения</p> 
 				</div>
 				<span class="stage color1">4 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict5.png" alt="Этап 5"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/pict5.png" alt="Этап работы 5"> <div class="dark-overlay"></div>
 				<div class="overlay">
 					<p>Согласование визуализаций проекта</p>
 				</div>
 				<span class="stage color1">5 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict6.png" alt="Этап 6"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/pict6.png" alt="Этап работы 6"> <div class="dark-overlay"></div>
 				<div class="overlay"><p>Разработка пакета чертежей <br>согласно договору</p>
 				</div>
 				<span class="stage color1">6 ЭТАП</span>
@@ -287,7 +289,7 @@
 	  <div class="pricing-grid">
 		<div class="pricing-card">
 		  <div class="image-container">
-			<img src="Image/ysl1.png" alt="Лайт">
+			<img src="Image/ysl1.png" alt="Тариф Лайт">
 		  </div>
 		  <p class="text3">ЛАЙТ</p>
 		  
@@ -300,7 +302,7 @@
 		</div>
 		<div class="pricing-card fill">
 		  <div class="image-container">
-			<img src="Image/ysl2.png" alt="База">
+			<img src="Image/ysl2.png" alt="Тариф База">
 		  </div>
 		  <p class="text3">БАЗА</p>
 			<p class="decor non_plus">Планировочные решения <span class="italics">3 варианта</span><br>
@@ -313,7 +315,7 @@
 		</div>
 		<div class="pricing-card">
 		  <div class="image-container">
-			<img src="Image/video.gif" alt="Рич Бич">
+			<img src="Image/video.gif" alt="Тариф Рич Бич">
 		  </div>
 		  <p class="text3">РИЧ БИЧ</p>
 			<p class="decor non_plus">Планировочные решения <span class="italics">3 варианта</span><br>
@@ -388,7 +390,7 @@
 	</div>
 	
 	<div class="The_form">
-    <img class="photo2" src="Image/form.jpg" alt="общая форма">
+    <img class="photo2" src="Image/form.jpg" alt="Дизайн интерера">
     <form id="myForm3" class="colum">
         <h3>ЗАКАЗАТЬ ДИЗАЙН ПРОЕКТ</h3>
         <input class="dop_color" type="text" id="name3" name="name" placeholder="Ваше имя" required>
@@ -402,13 +404,13 @@
 	<h3 id="details" class="title_for_blocks marg_for_gallery">ДЕТАЛИ НАШИХ ПРОЕКТОВ</h3>
 	<div class="container5">
 		<div class="gallery">
-		<img class="A" src="Image/30.png" alt="Photo 1">
-		<img class="B" src="Image/10.png" alt="Photo 2">
-		<img class="C" src="Image/41.png" alt="Photo 3">
-		<img class="D" src="Image/42.png" alt="Photo 4">
-		<img class="E" src="Image/15.png" alt="Photo 5">
-		<img class="F" src="Image/12.png" alt="Photo 6">
-		<img class="G" src="Image/14.png" alt="Photo 7">
+		<img class="A" src="Дизайн интерьера" alt="Photo 1">
+		<img class="B" src="Дизайн интерьера" alt="Photo 2">
+		<img class="C" src="Дизайн интерьера" alt="Photo 3">
+		<img class="D" src="Дизайн интерьера" alt="Photo 4">
+		<img class="E" src="Дизайн интерьера" alt="Photo 5">
+		<img class="F" src="Дизайн интерьера" alt="Photo 6">
+		<img class="G" src="Дизайн интерьера" alt="Photo 7">
 	</div>
 	</div>
 	<footer>
