--- a/Index.html
+++ b/Index.html
@@ -228,7 +228,7 @@
 	<div id="about" class="container3">
 		<h3 class="title_for_blocks">О НАС И НАШИХ ЦЕННОСТЯХ</h3>
 		<div class="row2 together_row">
-			<img class="photo" src="Image/Together2.jpg" alt="Общее фото сотрудников">
+			<img class="photo" src="Image/Та_самая_команда.jpg" alt="Общее фото сотрудников">
 			<div class="colum">
 				<p class="text2 padding3">Мы создаем интерьеры, наполненные смыслом и&nbspотражающие индивидуальность каждого&nbspзаказчика. <br>
 				Наши проекты —&nbspэто&nbspбаланс между&nbspфункциональностью,
@@ -248,35 +248,35 @@
 		
 		<h3 id="steps" class="title_for_blocks">ЭТАПЫ РАБОТЫ НАД ПРОЕКТОМ</h3>
 		<div class="grid-container">
-			<div class="grid-item"><img src="Image/pict1.png" alt="Этап работы 1"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/Та_самая_фото_1.png" alt="Этап работы 1"> <div class="dark-overlay"></div>
 				<div class="overlay">
 					<p>Личная встреча <br>и подписание договора</p>
 				</div>
 				<span class="stage color1">1 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict2.png" alt="Этап работы 2"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/Та_самая_фото_2.png" alt="Этап работы 2"> <div class="dark-overlay"></div>
 				<div class="overlay"><p>Обмер и фотофиксация помещения, <br>техническое задание</p>
 				</div>
 				<span class="stage color1">2 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict3.png" alt="Этап работы 3"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/Та_самая_фото_3.png" alt="Этап работы 3"> <div class="dark-overlay"></div>
 				<div class="overlay">
 					<p>Создание планировочных решений</p>
 				</div>
 				<span class="stage color1">3 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict4.png" alt="Этап работы 4"><div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/Та_самая_фото_4.png" alt="Этап работы 4"><div class="dark-overlay"></div>
 				<div class="overlay"><p>Создание <br>визуальной концепции помещения</p> 
 				</div>
 				<span class="stage color1">4 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict5.png" alt="Этап работы 5"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/Та_самая_фото_5.png" alt="Этап работы 5"> <div class="dark-overlay"></div>
 				<div class="overlay">
 					<p>Согласование визуализаций проекта</p>
 				</div>
 				<span class="stage color1">5 ЭТАП</span>
 			</div>
-			<div class="grid-item"><img src="Image/pict6.png" alt="Этап работы 6"> <div class="dark-overlay"></div>
+			<div class="grid-item"><img src="Image/Та_самая_фото_6.png" alt="Этап работы 6"> <div class="dark-overlay"></div>
 				<div class="overlay"><p>Разработка пакета чертежей <br>согласно договору</p>
 				</div>
 				<span class="stage color1">6 ЭТАП</span>
@@ -289,7 +289,7 @@
 	  <div class="pricing-grid">
 		<div class="pricing-card">
 		  <div class="image-container">
-			<img src="Image/ysl1.png" alt="Тариф Лайт">
+			<img src="Image/дизайн_интерьера_эскиз.png" alt="Тариф Лайт">
 		  </div>
 		  <p class="text3">ЛАЙТ</p>
 		  
@@ -302,7 +302,7 @@
 		</div>
 		<div class="pricing-card fill">
 		  <div class="image-container">
-			<img src="Image/ysl2.png" alt="Тариф База">
+			<img src="Image/дизайн_интерьера_гостиная.png" alt="Тариф База">
 		  </div>
 		  <p class="text3">БАЗА</p>
 			<p class="decor non_plus">Планировочные решения <span class="italics">3 варианта</span><br>
@@ -315,12 +315,12 @@
 		</div>
 		<div class="pricing-card">
 		  <div class="image-container">
-			<img src="Image/video.gif" alt="Тариф Рич Бич">
+			<img src="Image/дизайн_интерьера_панорамма.gif" alt="Тариф Рич Бич">
 		  </div>
 		  <p class="text3">РИЧ БИЧ</p>
 			<p class="decor non_plus">Планировочные решения <span class="italics">3 варианта</span><br>
-			Таблица материалов отделки<br>
-			Реалистичные визуализации<br>
+			Таблица материалов отделки<br></p>
+			<p class="decor non_plus2">Реалистичные визуализации<br>
 			Полный комплект чертежей</p>
 			<ul class="decor end">
 			<li>+ Демонстрация планировки в 3D</li>
@@ -362,7 +362,7 @@
         <!-- Первая карточка -->
         <div class="card-wrapper">
       <div class="card">
-        <img src="Image/Author.png" alt="Картинка 1"><div class="card-title pos_rig">АВТОРСКИЙ НАДЗОР<br>Сделай сам, а мы подскажем!</div>
+        <img src="Image/Та_самая_авторский_надзор.png" alt="Картинка 1"><div class="card-title pos_rig">АВТОРСКИЙ НАДЗОР<br>Сделай сам, а мы подскажем!</div>
       </div>
       <div class="text-wrapper">
         <div class="text-panel">
@@ -379,7 +379,7 @@
     <!-- Карточка 2 -->
     <div class="card-wrapper">
       <div class="card">
-        <img src="Image/management3.png" alt="Картинка 2"><div class="card-title pos_lef">МЕНЕДЖМЕНТ<br>Мы сделаем все за тебя!</div>
+        <img src="Image/Та_самая_менеджмент.png" alt="Картинка 2"><div class="card-title pos_lef">МЕНЕДЖМЕНТ<br>Мы сделаем все за тебя!</div>
       </div>
       <div class="text-wrapper">
         <div class="text-panel">
@@ -390,7 +390,7 @@
 	</div>
 	
 	<div class="The_form">
-    <img class="photo2" src="Image/form.jpg" alt="Дизайн интерера">
+    <img class="photo2" src="Image/Та_самая_интерьер.jpg" alt="Дизайн интерера">
     <form id="myForm3" class="colum">
         <h3>ЗАКАЗАТЬ ДИЗАЙН ПРОЕКТ</h3>
         <input class="dop_color" type="text" id="name3" name="name" placeholder="Ваше имя" required>
@@ -404,13 +404,13 @@
 	<h3 id="details" class="title_for_blocks marg_for_gallery">ДЕТАЛИ НАШИХ ПРОЕКТОВ</h3>
 	<div class="container5">
 		<div class="gallery">
-		<img class="A" src="Дизайн интерьера" alt="Photo 1">
-		<img class="B" src="Дизайн интерьера" alt="Photo 2">
-		<img class="C" src="Дизайн интерьера" alt="Photo 3">
-		<img class="D" src="Дизайн интерьера" alt="Photo 4">
-		<img class="E" src="Дизайн интерьера" alt="Photo 5">
-		<img class="F" src="Дизайн интерьера" alt="Photo 6">
-		<img class="G" src="Дизайн интерьера" alt="Photo 7">
+		<img class="A" src="Image/Та_самая_интерьер_25.png" alt="Photo 1">
+		<img class="B" src="Image/Та_самая_интерьер_22.png" alt="Photo 2">
+		<img class="C" src="Image/Та_самая_интерьер_10.png" alt="Photo 3">
+		<img class="D" src="Image/Та_самая_интерьер_17.png" alt="Photo 4">
+		<img class="E" src="Image/Та_самая_фото_интерьер.png" alt="Photo 5">
+		<img class="F" src="Image/Та_самая_фото_интерьер_2.png" alt="Photo 6">
+		<img class="G" src="Image/Та_самая_фото_интерьер_3.png" alt="Photo 7">
 	</div>
 	</div>
 	<footer>
