New email and other changes

--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 	
 <meta property="og:title" content="Дизайн интерьера – ТА САМАЯ"> 
 <meta property="og:description" content="Создайте уникальные интерьеры, отражающие вашу индивидуальность. Получите консультацию от лучших дизайнеров."> 
-<meta property="og:image" content="logo/android-chrome-512x512.png"> 
+<meta property="og:image" content="logo/favicon_1200x630.png"> 
 <meta property="og:url" content="http://tasamayadesign.ru"> 
 <meta property="og:type" content="website">
 <meta property="og:locale" content="ru_RU">
@@ -229,12 +229,12 @@
 		<h3 class="title_for_blocks">О НАС И НАШИХ ЦЕННОСТЯХ</h3>
 		<div class="row2 together_row">
 			<img class="photo" src="Image/Та_самая_команда.jpg" alt="Общее фото сотрудников">
-			<div class="colum">
+			<div class="colum_tog text_block">
 				<p class="text2 padding3">Мы создаем интерьеры, наполненные смыслом и&nbspотражающие индивидуальность каждого&nbspзаказчика. <br>
 				Наши проекты —&nbspэто&nbspбаланс между&nbspфункциональностью,
 				эстетикой и&nbspуникальными решениями.
 				</p>
-				<p class="fat_text padding_for_fat">Что мы любим:</p>
+				<p class="fat_text">Что мы любим:</p>
 				<ul  class="list">
 				  <li>Разрабатывать сложные, многослойные пространства, где&nbspкаждая деталь отражает вашу&nbspличность.</li>
 				  <li>Применять современные технологии и&nbspинновационные решения, обеспечивая комфорт и&nbspудобство.</li>
