--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 	
 <meta property="og:title" content="Дизайн интерьера – ТА САМАЯ"> 
 <meta property="og:description" content="Создайте уникальные интерьеры, отражающие вашу индивидуальность. Получите консультацию от лучших дизайнеров."> 
-<meta property="og:image" content="logo/favicon_1200x630.png"> 
+<meta property="og:image" content="https://tasamayadesign.ru/logo/favicon_1200x630.png"> 
 <meta property="og:url" content="http://tasamayadesign.ru"> 
 <meta property="og:type" content="website">
 <meta property="og:locale" content="ru_RU">
