--- a/Index.html
+++ b/Index.html
@@ -97,11 +97,12 @@
 				</div>
     		</div>
     <!-- Основной текст -->
-    		<img class="for_title2" src="Image/titles.png" alt="Заголовок" aria-hidden="true">
-      		<!--<div class="for_title1"><h1 id="reference-title">ТА САМАЯ</h1><h2 id="adjusted-title">студия дизайна интерьера</h2></div>-->
-			<img class="new_bac" src="Style/TitlePhoto2.png" alt="Картинка для шапки после 500рх">
+    		<div class="row_for_titile"><h1 class="hidden-h1">Та самая<br>студия дизайна интерьера</h1>
+				<img class="for_title2" src="Image/titles.png" alt="Дизайн интерьера – ТА САМАЯ" aria-hidden="true">
+				</div>
+			<img class="new_bac" src="Style/TitlePhoto2.png" alt="Дизайн интерьера – ТА САМАЯ">
 			<div class="main-content p">
-      				<p class="text1">Дизайн, который решает сложные задачи</p>
+      				<h2 class="text1">Дизайн, который решает сложные задачи</h2>
       				<p class="text2">Ваша идея —&nbspэто&nbspнаш&nbspвызов! Мы —&nbspстудия дизайна интерьеров, <br>специализирующаяся на&nbspсложных и&nbspнестандартных проектах.</p>
       				<p class="text2">Если вы мечтаете о&nbspквартире с&nbspинтуитивно понятной <br>системой освещения, сауной и&nbspджакузи, или&nbspхотите создать <br>уникальное пространство в&nbspстаром фонде —&nbspмы&nbspзнаем, как&nbspэто&nbspсделать!</p>
     		</div>
