--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="index, follow">
-<meta name="description" content="Студия дизайна интерьера 'ТА САМАЯ' предлагает уникальные решения для вашего дома и офиса. Мы создаем функциональные и эстетически приятные интерьеры, которые отражают ваш стиль и характер.Если вы мечтаете о квартире с интуитивно понятной системой освещения, сауной и джакузи, или хотите создать уникальное пространство в старом фонде — мы знаем, как это сделать!">
+<meta name="description" content="Студия дизайна интерьера 'ТА САМАЯ' предлагает уникальные решения для дома и офиса. Создаем функциональные, стильные интерьеры, отражающие ваш характер. Хотите удобное освещение, сауну, джакузи или особенное пространство в старом фонде? Мы знаем, как это сделать!">
 <meta name="keywords" content="дизайн, дизайн интерьера, оформление интерьера, интерьерный дизайн, дизайнерский проект, 
 квартиры, дома, офисы, ремонт, создание интерьеров, современные интерьеры, креативные решения, экологичный дизайн, стильный интерьер, освещение, архитектурные решения, уникальные проекты, индивидуальный дизайн, перепланировка, 
 дизайн-проект, дизайнерские идеи, уютные интерьеры, стильная мебель, модерн, классический стиль, минимализм, эко-стиль, интерьер для бизнеса, улучшение пространства, Санкт-Петербург, Москва">
