--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,7 @@
 	<link rel="icon" type="image/svg+xml" href="logo/favicon.svg" />
 	<link rel="shortcut icon" href="logo/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="logo/apple-touch-icon.png" />
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="web-app-manifest-192x192" sizes="192x192" href="logo/web-app-manifest-192x192.png" />
 	<link rel="web-app-manifest-512x512" sizes="512x512" href="logo/web-app-manifest-512x512.png" />
 	<meta name="apple-mobile-web-app-title" content="Та самая" />
